// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Select with width auto correctly: enzyme.shallow 1`] = `
<Styled(div)
  defaultOpen={false}
  placeholder="Select..."
  width="auto"
>
  <Styled(div)
    defaultOpen={false}
    onClick={[Function]}
    placeholder="Select..."
    width="auto"
  >
    <Styled(div)>
      Select...
    </Styled(div)>
    <Icon
      color="#444"
      icon="ChevronSvg"
    />
  </Styled(div)>
</Styled(div)>
`;

exports[`renders Select with width stretched correctly: enzyme.shallow 1`] = `
<Styled(div)
  defaultOpen={false}
  placeholder="Select..."
  width="stretched"
>
  <Styled(div)
    defaultOpen={false}
    onClick={[Function]}
    placeholder="Select..."
    width="stretched"
  >
    <Styled(div)>
      Select...
    </Styled(div)>
    <Icon
      color="#444"
      icon="ChevronSvg"
    />
  </Styled(div)>
</Styled(div)>
`;
